durga@48demo.com.bleadtest/src/objects/User_CheckinHistory__c.object
<CustomObject>
    <fields>
        <fullName>BT_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booth</label>
        <referenceTo>Booth__c</referenceTo>
        <relationshipLabel>User_CheckinHistory</relationshipLabel>
        <relationshipName>User_CheckinHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckoutTime__c</fullName>
        <label>CheckoutTime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>User_CheckinHistory</relationshipLabel>
        <relationshipName>User_CheckinHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UC_CheckinDate__c</fullName>
        <label>CheckinDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UC_CheckinTime__c</fullName>
        <label>CheckinTime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UC_DeviceIMEI__c</fullName>
        <label>DeviceIMEI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UC_DeviceManufacturer__c</fullName>
        <label>DeviceManufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UC_DeviceOsname__c</fullName>
        <label>DeviceOsname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UC_OsVersion__c</fullName>
        <label>OsVersion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_CheckinHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User_CheckinHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BT_id__c</columns>
        <columns>User_id__c</columns>
        <columns>UC_CheckinDate__c</columns>
        <columns>UC_CheckinTime__c</columns>
        <columns>CheckoutTime__c</columns>
        <columns>UC_DeviceIMEI__c</columns>
        <columns>UC_DeviceManufacturer__c</columns>
        <columns>EV_id__c</columns>
        <columns>UC_DeviceOsname__c</columns>
        <columns>UC_OsVersion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UC_{00000000}</displayFormat>
        <label>UC_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User_CheckinHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>